--- a/Test.Services/Test.Services.csproj
+++ b/Test.Services/Test.Services.csproj
@@ -51,12 +51,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\OrderGrouppedByAddressModel.cs" />
+    <Compile Include="Models\OrderProduct.cs" />
+    <Compile Include="OrderService.cs" />
+    <Compile Include="Models\OrderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{87CB7BE2-7203-421A-A4F4-991343C5CC68}</Project>
+      <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Test.Core\Test.Core.csproj">
+      <Project>{f9263e32-233c-49db-a482-dfc91c229eb7}</Project>
+      <Name>Test.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
